                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-08-2005 updated: reverted the same "fix" to mplayer.conf
 - 27-08-2005 updated: mplayer.conf's user-agent, may fix non working shoutcast stations
 - 26-08-2005 added: httpapi exposed more values to GetGuiStatus
 - 26-08-2005 fixed: dvdplayer wouldn't play fightclub r1. now sets region mask to what disc reports it's from if available
 - 26-08-2005 chaged: httpapi to be more thread safe
 - 25-08-2005 fixed: dvdplayer would crash due to one thread deleting renderer, while one was using it. (rare crash)
 - 25-08-2005 added: new classes CSharedSection, CSharedLock, CExclusiveLock - used to protect resources, when multiply threads are allowed to read. 
 - 25-08-2005 changed: optimized scolling text rendering, the rss-control was drawing the entire feedinfo while only a small part is visible.
 - 25-08-2005 added: [ 1237903 ] Use custom thumbnails for shares - (with minor modification)
 - 25-08-2005 fixed: slideshow image duration
 - 24-08-2005 fixed: infrequent tearing on top of screen when rendering high rez material. (something seem to be wrong with the GPU callbacks)
 - 24-08-2005 changed: when in 1080i, default method interlace handling when in auto is nolonger syncing, but deinterlacing (only affects dvdplayer right now)
 - 24-08-2005 changed: small speedup of interlaced rendering, (less issues in 1080i, still too slow thou)
 - 24-08-2005 fixed: playback in 1080i was a slideshow. (still issues with interlaced rendering thou)
 - 24-08-2005 fixed: dvdplayer would crash or output nonsense name for audiostream if it was nonexisting